--- a/find.html
+++ b/find.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>find> - Kokoa Talk</title>
+    <title>find - Kokoa Talk</title>
 </head>
 
 <body>
@@ -28,8 +28,7 @@
         <h1 class="screen-header__title">Find</h1>
         <div class="screen-header__icons">
             <span><i class="fas fa-search fa-lg"></i></span>
-            <span><i class="fas fa-cog fa-lg"></i></span>
-            <span class="nav__notification__dot"></span>
+            <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a></span>
         </div>
 
     </header>
